[package]
name = "syt"
version = "0.1.0"
edition = "2021"
authors = ["sasha <gitcommit@thebigsasha.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.2.0", features = ["d1"] }
worker-macros = { version = "0.2.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.204"
serde_json = "1.0.124"
